--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Hackathon at Jesup 2018-02-15",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
