moved to root directory

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "JesupHackathon",
   "version": "1.0.0",
   "description": "Hackathon at Jesup 2018-02-15",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -25,5 +25,5 @@
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
-  }, "scripts": {"postinstall": "cd server && npm install"}
+  }
 }
